/**
 * This file was generated by kysely-codegen.
 * Please do not edit it manually.
 */

import type { ColumnType } from 'kysely'

export type Generated<T> =
	T extends ColumnType<infer S, infer I, infer U>
		? ColumnType<S, I | undefined, U>
		: ColumnType<T, T | undefined, T>

export type Json = JsonValue

export type JsonArray = JsonValue[]

export type JsonObject = {
	[x: string]: JsonValue | undefined
}

export type JsonPrimitive = boolean | number | string | null

export type JsonValue = JsonArray | JsonObject | JsonPrimitive

export type Timestamp = ColumnType<Date, Date | string, Date | string>

export interface Accounts {
	accessToken: string | null
	accessTokenExpiresAt: Timestamp | null
	accountId: string
	createdAt: Generated<Timestamp>
	id: string
	idToken: string | null
	password: string | null
	providerId: string
	refreshToken: string | null
	refreshTokenExpiresAt: Timestamp | null
	scope: string | null
	updatedAt: Timestamp
	userId: string
}

export interface Applications {
	cover_letter: string
	created_at: Generated<Timestamp | null>
	freelancer_id: string
	id: Generated<string>
	project_id: string
	proposed_deadline: Timestamp | null
	proposed_price: number
	status: string
	updated_at: Generated<Timestamp | null>
}

export interface ConversationMembers {
	conversation_id: string
	created_at: Generated<Timestamp | null>
	id: Generated<string>
	role: string
	user_id: string
}

export interface Conversations {
	context_id: string
	context_type: string
	created_at: Generated<Timestamp | null>
	created_by: string
	customer_id: string
	freelancer_id: string
	id: Generated<string>
	updated_at: Generated<Timestamp | null>
}

export interface FreelancerProfiles {
	availability: string | null
	created_at: Generated<Timestamp | null>
	experience: string | null
	hourly_rate: number | null
	id: Generated<string>
	specialization: string | null
	updated_at: Generated<Timestamp | null>
	user_id: string
}

export interface KnexMigrations {
	batch: number | null
	id: Generated<number>
	migration_time: Timestamp | null
	name: string | null
}

export interface KnexMigrationsLock {
	index: Generated<number>
	is_locked: number | null
}

export interface MessageReads {
	conversation_id: string
	created_at: Generated<Timestamp | null>
	id: Generated<string>
	last_read_message_created_at: Timestamp
	last_read_message_id: string
	read_at: Timestamp
	updated_at: Generated<Timestamp | null>
	user_id: string
}

export interface Messages {
	conversation_id: string
	created_at: Generated<Timestamp | null>
	id: Generated<string>
	sender_id: string
	text: string
}

export interface PortfolioItems {
	caption: string | null
	category: string | null
	created_at: Generated<Timestamp | null>
	description: string | null
	freelancer_profile_id: string
	id: Generated<string>
	media_height: number | null
	media_type: string | null
	media_url: string
	media_width: number | null
	title: string
	tools_used: Json | null
	updated_at: Generated<Timestamp | null>
}

export interface ProjectAttachments {
	created_at: Generated<Timestamp | null>
	file_size_bytes: number | null
	file_url: string
	filename: string
	id: Generated<string>
	mime_type: string | null
	project_id: string
}

export interface Projects {
	budget_max: number
	budget_min: number
	budget_type: string
	category: string
	client_id: string
	created_at: Generated<Timestamp | null>
	deadline: Timestamp
	description: string
	experience_level: string
	id: Generated<string>
	status: string
	title: string
	updated_at: Generated<Timestamp | null>
}

export interface ProjectSkills {
	created_at: Generated<Timestamp | null>
	project_id: string
	skill_id: string
}

export interface Sessions {
	createdAt: Generated<Timestamp>
	expiresAt: Timestamp
	id: string
	ipAddress: string | null
	token: string
	updatedAt: Timestamp
	userAgent: string | null
	userId: string
}

export interface Skills {
	category: string | null
	created_at: Generated<Timestamp | null>
	id: string
	legacy_id: string | null
	name: string
}

export interface Languages {
	code: string
	name: string
	native_name: string
	sort_order: number
}

export interface UserProfiles {
	avatar_url: string | null
	bio: string | null
	company_name: string | null
	company_role: string | null
	created_at: Generated<Timestamp | null>
	id: string
	location: string | null
	name: string | null
	nickname: string
	search_vector: Generated<string | null>
	updated_at: Generated<Timestamp | null>
	user_id: string
}

export interface UserLanguages {
	created_at: Generated<Timestamp | null>
	lang_level: string
	language_code: string
	user_id: string
}

export interface Users {
	createdAt: Generated<Timestamp>
	email: string
	emailVerified: boolean
	id: string
	image: string | null
	name: string
	role: string
	updatedAt: Generated<Timestamp>
}

export interface UserSkills {
	created_at: Generated<Timestamp | null>
	id: string
	legacy_skill_id: string | null
	proficiency_level: string | null
	skill_id: string
	user_id: string
}

export interface Verifications {
	createdAt: Generated<Timestamp>
	expiresAt: Timestamp
	id: string
	identifier: string
	updatedAt: Generated<Timestamp>
	value: string
}

export interface DB {
	accounts: Accounts
	applications: Applications
	conversation_members: ConversationMembers
	conversations: Conversations
	freelancer_profiles: FreelancerProfiles
	knex_migrations: KnexMigrations
	knex_migrations_lock: KnexMigrationsLock
	languages: Languages
	message_reads: MessageReads
	messages: Messages
	portfolio_items: PortfolioItems
	project_attachments: ProjectAttachments
	project_skills: ProjectSkills
	projects: Projects
	sessions: Sessions
	skills: Skills
	user_languages: UserLanguages
	user_profiles: UserProfiles
	user_skills: UserSkills
	users: Users
	verifications: Verifications
}
